[package]
name = "mrtdump"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_with = { version = "3.14.0", features = ["chrono"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.14"
