[package]
name = "mrtdump"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "A tool for dumping MRT data"
authors = ["Vincent Gauthier <vg@luxbulb.org>"]
repository = "https://github.com/vgauthier/mrtdump"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_with = { version = "3.14.0", features = ["chrono"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.14"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
